--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 *{
     padding: 0;
     margin: 0%;
-    box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
+
 }
+
 body{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(images/pexels-tyler-lastovich-937782.jpg);
+    display: flex;
+    flex-direction: column;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(images/background.png);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -251,6 +254,76 @@ margin: 100px;
     }
 }
 
+form{
+    border: 15px solid rgba(153, 153, 153, 0.6);
+}
+
+form > div{
+    margin: 30px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+label{
+    display: block;
+    margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+input{
+    height: 20px;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+button{
+    margin-left: 20px;
+    margin-bottom: 30px;
+    padding: 10px 32px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.message-error,
+.message-success {
+    border: 1px solid transparent;
+    padding: 16px 32px;
+    margin-bottom: 20px;
+    display: none;
+}
+
+.message-error ul,
+.message-success ul {
+    list-style: none;
+}
+
+.message-error.visible {
+    display: block;
+    border: 1px solid rgba(212, 42, 0, 1);
+    color: rgba(212, 42, 0);
+    background-color: rgba(212, 42, 0, 0.4);
+}
+
+.message-success.visible {
+    display: block;
+    border: 1px solid rgba(81, 150, 2);
+    color: rgba(81, 150, 2);
+    background-color: rgba(113, 212, 0, 0.4);
+}
+
+.success {
+    border: 1px solid rgba(81, 150, 2);
+    background-color: rgba(113, 212, 0, 0.4);
+}
+
 @media screen and (max-width: 720px){
     main{
         width: 500px;
@@ -261,4 +334,32 @@ margin: 100px;
     main{
         width: 300px;
     }
+}
+
+body {
+    transition: background-color 0.5s, color 0.5s;
+}
+
+.container {
+    max-width: 200px;
+    margin: 50px ;
+    padding: 20px;
+    background-color: #fff;
+    color: #333;
+    border-radius: 8px; 
+
+}
+
+footer {
+    margin-top: auto;
+    text-align: center;
+}
+
+header{
+    justify-content: end;
+}
+
+.dark-mode {
+    color: white;
+    background-image: url(images/backgroundDarkMode.png);
 }
